# sinai_migrate

./: .gitignore  pyproject.toml
src/: main.py
src/migrate/: __init__.py  config.py  transform.py  wrangle.py
